--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "impermanent_loss",
+  "name": "decentralized_exchange",
   "private": true,
   "version": "0.0.0",
   "type": "module",
